package designPatterns.solid.L.correct;

public class EngineVehicle extends Vehicle{
    public Boolean hasEngine(){
        return true;
    }
}
