package designPatterns.solid.L.wrong;

public class Bicycle extends Vehicle{
    @Override
    public Boolean hasEngine(){
        return null;
    }
}
