package designPatterns.solid.L.wrong;

public class Vehicle {
    public Integer getNumberOfWheels(){
        return 2;
    }
    public Boolean hasEngine(){
        return true;
    }
}
