@startuml

title __CORRECT's Class Diagram__\n

  namespace designPatterns.solid.L {
    namespace correct {
      class designPatterns.solid.L.correct.Bicycle {
      }
    }
  }
  

  namespace designPatterns.solid.L {
    namespace correct {
      class designPatterns.solid.L.correct.Car {
      }
    }
  }
  

  namespace designPatterns.solid.L {
    namespace correct {
      class designPatterns.solid.L.correct.EngineVehicle {
          + hasEngine()
      }
    }
  }
  

  namespace designPatterns.solid.L {
    namespace correct {
      class designPatterns.solid.L.correct.Vehicle {
          + getNumberOfWheels()
      }
    }
  }
  

  designPatterns.solid.L.correct.Bicycle -up-|> designPatterns.solid.L.correct.Vehicle
  designPatterns.solid.L.correct.Car -up-|> designPatterns.solid.L.correct.EngineVehicle
  designPatterns.solid.L.correct.EngineVehicle -up-|> designPatterns.solid.L.correct.Vehicle


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
